--- a/ycmd/default_settings.json
+++ b/ycmd/default_settings.json
@@ -36,5 +36,6 @@
   "use_ultisnips_completer": 1,
   "csharp_server_port": 2000,
   "hmac_secret": "",
-  "server_keep_logfiles": 0
+  "server_keep_logfiles": 0,
+  "extra_spacing": 0
 }
